# project_2026_1

./: .coverage  .gitignore  Dockerfile  README.md  TECHNICAL_ROADMAP.md  docker_build.sh  docker_run.sh  log  main.py  pyproject.toml  requirements.txt  reward_model_training_metrics.csv
commits/: commit-260219-model-hub-refactor  commit-260302-reward-model-data  commit-260304-reward-data-quality  commit-260308-grpo-model-evaluation  draft
data_preprocessing/: DATA_PIPELINE_DESIGN.md  config.py  fetch_cfun.py  formatters.py  parsers.py  pipeline.py  prompt_templates.py  synthesize_reward_data.py  synthesize_task_data.py  test.py  visulization.ipynb
evaluation/: advanced_sft_eval.md  benchmark_compare.py  compare_sft_base.md  eval_auto_metrics.py  eval_llm_judge.py  evaluation_report.md  export_human_eval.py  generate_outputs.py  generate_report.py  generation_comparison.json  pipeline.py
rl/: RL_DESIGN.md  __init__.py  humor_judge.py  inference.py  reward_model.py  rewards.py  sample_reward_model.ipynb  train_grpo.py  train_reward_model.py
scripts/: eval_sft.py  train_sft.py  upload_model.py
sft/: __init__.py  eval_sft.py  train_sft.py
shell/: colab_init.sh  deploy.sh  pull_model_to_hf.sh
tests/: test_benchmark_compare.py  test_eval_auto_metrics.py  test_eval_llm_judge.py  test_export_human_eval.py  test_formatters.py  test_generate_report.py  test_humor_judge.py  test_langid_threshold.ipynb  test_parsers_cfun.py  test_pipeline.py  test_pipeline_sft_reward_order.py  test_rewards.py  test_synthesize_reward_data.py  test_synthesize_task_data.py
(+54 files in other folders)
